tests/suite/fail/types/undefined_variable.ny
fn main() {
    let x = y //~ ERROR undefined variable
}
